--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="day">14</div>
       <div class="day">15</div>
       <div class="day">16</div>
-      <div class="day">17</div>
+      <div class="day active">17</div>
       <div class="day">18</div>
       <div class="day">19</div>
       <div class="day">20</div>
@@ -46,7 +46,7 @@
     </div>
     <footer>
       <p class="copyright">Built by <small>Saul Gavrilov</small></p>
-      <small class="version">1.0.0</small>
+      <small class="version">v1.0.0</small>
     </footer>
     <script src="main.js"></script>
   </body>
