--- a/index.html
+++ b/index.html
@@ -9,13 +9,27 @@
   </head>
   <body>
     <header>
-      <h3 class="monthYear">July <span class="monthYear__year">2021</span></h3>
+      <h3 class="monthYear"></h3>
+
+      <div>
+        <button class="prevBtn">Prev</button>
+        <button class="nextBtn">Next</button>
+      </div>
     </header>
+    <div class="weekdays">
+      <div class="weekday">Sunday</div>
+      <div class="weekday">Monday</div>
+      <div class="weekday">Tuesday</div>
+      <div class="weekday">Wednesday</div>
+      <div class="weekday">Thursday</div>
+      <div class="weekday">Friday</div>
+      <div class="weekday">Saturday</div>
+    </div>
     <div class="calendar">
-      <div class="day">1</div>
+      <!-- <div class="day">1</div>
       <div class="day">2</div>
       <div class="day">3</div>
-      <div class="day">4</div>
+      <div class="day paddingDay">4</div>
       <div class="day">5</div>
       <div class="day">6</div>
       <div class="day">7</div>
@@ -42,12 +56,12 @@
       <div class="day">28</div>
       <div class="day">29</div>
       <div class="day">30</div>
-      <div class="day">31</div>
+      <div class="day">31</div> -->
     </div>
     <footer>
       <p class="copyright">Built by <small>Saul Gavrilov</small></p>
       <small class="version">v1.0.0</small>
     </footer>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
   </body>
 </html>
