--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
     <main class="calendar"></main>
 
     <footer>
-      <p>&copy; Copyright</p>
+      <p>
+        Built by
+        <a href="https://github.com/sgavrielov" target="_blank"> S.G</a>
+      </p>
     </footer>
 
     <dialog new-event-modal>
-      <button data-close-new-event-modal-btn>
+      <button close-new-event-modal-btn>
         <svg viewBox="0 0 24 24">
           <line x1="18" y1="6" x2="6" y2="18"></line>
           <line x1="6" y1="6" x2="18" y2="18"></line>
@@ -56,11 +59,11 @@
       <h3></h3>
       <input type="text" placeholder="title" id="title" />
       <textarea name="" id="description" placeholder="Description"></textarea>
-      <button data-save-even-btn>Save</button>
+      <button save-even-btn>Save</button>
     </dialog>
 
     <dialog event-modal>
-      <button data-close-event-modal-btn>
+      <button close-event-modal-btn>
         <svg viewBox="0 0 24 24">
           <line x1="18" y1="6" x2="6" y2="18"></line>
           <line x1="6" y1="6" x2="18" y2="18"></line>
