Updated  main.js file

--- a/index.html
+++ b/index.html
@@ -74,6 +74,6 @@
       <button delete-event-btn>Delete</button>
     </dialog>
 
-    <script src="index.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
