--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>Calendar</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/notification.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.8.1/github-markdown.min.css"
+    />
   </head>
   <body>
     <header>
       <div class="currentDate">
-        <h1 data-current-month></h1>
-        <small data-current-year></small>
+        <h1 current-month></h1>
+        <small current-year></small>
       </div>
 
       <nav>
@@ -37,19 +41,15 @@
           </svg>
           <span>LOAD DATA</span>
         </label>
-        <input type="file" id="dataInput" hidden data-load-data-input />
-        <button
-          class="prev_month_btn"
-          title="Show previous month"
-          data-prev-btn
-        >
+        <input type="file" id="dataInput" hidden load-data-input />
+        <button class="prev_month_btn" title="Show previous month" prev-btn>
           <svg viewBox="0 0 24 24">
             <line x1="19" y1="12" x2="5" y2="12"></line>
             <polyline points="12 19 5 12 12 5"></polyline>
           </svg>
         </button>
 
-        <button class="next_month_btn" title="Show next month" data-next-btn>
+        <button class="next_month_btn" title="Show next month" next-btn>
           <svg viewBox="0 0 24 24">
             <line x1="5" y1="12" x2="19" y2="12"></line>
             <polyline points="12 5 19 12 12 19"></polyline>
@@ -58,62 +58,30 @@
       </nav>
     </header>
 
-    <div class="weekdays" data-weekdays></div>
+    <div class="weekdays" weekdays></div>
 
-    <div class="calendar" data-calendar></div>
+    <div class="calendar" calendar></div>
 
-    <dialog data-new-todo>
-      <div class="dialog-container">
-        <button data-close-new-todo-dialog-btn>
+    <div class="viewDataContainer">
+      <div class="viewDataControls">
+        <button toggle-edit-day-data-btn>
           <svg viewBox="0 0 24 24">
-            <line x1="18" y1="6" x2="6" y2="18"></line>
-            <line x1="6" y1="6" x2="18" y2="18"></line>
+            <path d="M12 20h9"></path>
+            <path
+              d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
+            ></path>
           </svg>
         </button>
-
-        <h2 data-new-todo-date></h2>
-        <input type="text" placeholder="Title" data-new-todo-title />
-        <textarea data-new-todo-desc placeholder="Description"></textarea>
-        <div>
-          <button data-save-new-todo-btn>
-            <svg viewBox="0 0 24 24">
-              <line x1="12" y1="5" x2="12" y2="19"></line>
-              <line x1="5" y1="12" x2="19" y2="12"></line>
-            </svg>
-
-            SAVE
-          </button>
-          <button data-cancel-new-todo-btn>
-            <svg viewBox="0 0 24 24">
-              <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
-              <line x1="9" y1="9" x2="15" y2="15"></line>
-              <line x1="15" y1="9" x2="9" y2="15"></line>
-            </svg>
-            CANCEL
-          </button>
-        </div>
       </div>
-    </dialog>
-
-    <div class="todos">
-      <div class="todo">
-        <h2>Todo Title</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-          distinctio alias accusantium dolore saepe architecto neque illo
-          consequatur. Hic fugit consequatur perspiciatis tenetur! Magni, totam.
-        </p>
-        <div>
-          <button>DONE</button>
-          <button>REMOVE</button>
-        </div>
-      </div>
+      <div class="markdown-body" id="output" day-data></div>
+      <textarea id="markdownEditor" edit-day-data></textarea>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="./assets/js/Notification.js"></script>
     <script src="./assets/js/faviconGenerator.js"></script>
-    <!-- <script src="./assets/js/main.js"></script> -->
     <script src="./assets/js/classes/UI.js"></script>
-    <script src="./assets/js/test.js"></script>
+    <script src="./assets/js/main.js"></script>
+    <!-- <script src="./assets/js/test.js"></script> -->
   </body>
 </html>
