--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calendar</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/notification.css" />
+    <link
+      rel="stylesheet"
+      href="./assets/vendor/notification/notification.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.8.1/github-markdown.min.css"
@@ -20,17 +23,7 @@
 
       <nav>
         <label for="dataInput">
-          <svg
-            viewBox="0 0 24 24"
-            width="24"
-            height="24"
-            stroke="currentColor"
-            stroke-width="2"
-            fill="none"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            class="css-i6dzq1"
-          >
+          <svg viewBox="0 0 24 24">
             <path
               d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
             ></path>
@@ -42,6 +35,16 @@
           <span>LOAD DATA</span>
         </label>
         <input type="file" id="dataInput" hidden load-data-input />
+        <button class="prev_month_btn" title="Show previous month" download-btn>
+          <svg viewBox="0 0 24 24">
+            <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
+            <polyline points="7 10 12 15 17 10"></polyline>
+            <line x1="12" y1="15" x2="12" y2="3"></line>
+          </svg>
+        </button>
+
+        <span>|</span>
+
         <button class="prev_month_btn" title="Show previous month" prev-btn>
           <svg viewBox="0 0 24 24">
             <line x1="19" y1="12" x2="5" y2="12"></line>
@@ -62,8 +65,18 @@
 
     <div class="calendar" calendar></div>
 
-    <div class="viewDataContainer">
+    <div class="viewDataContainer" view-data-container>
       <div class="viewDataControls">
+        <h2 view-data-date style="flex: 1"></h2>
+        <button save-day-data-btn>
+          <svg viewBox="0 0 24 24">
+            <path
+              d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
+            ></path>
+            <polyline points="17 21 17 13 7 13 7 21"></polyline>
+            <polyline points="7 3 7 8 15 8"></polyline>
+          </svg>
+        </button>
         <button toggle-edit-day-data-btn>
           <svg viewBox="0 0 24 24">
             <path d="M12 20h9"></path>
@@ -72,16 +85,21 @@
             ></path>
           </svg>
         </button>
+        <button close-view-data-btn>
+          <svg viewBox="0 0 24 24">
+            <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+            <line x1="9" y1="9" x2="15" y2="15"></line>
+            <line x1="15" y1="9" x2="9" y2="15"></line>
+          </svg>
+        </button>
       </div>
       <div class="markdown-body" id="output" day-data></div>
       <textarea id="markdownEditor" edit-day-data></textarea>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="./assets/js/Notification.js"></script>
-    <script src="./assets/js/faviconGenerator.js"></script>
+    <script src="./assets/vendor/notification/Notification.js"></script>
     <script src="./assets/js/classes/UI.js"></script>
     <script src="./assets/js/main.js"></script>
-    <!-- <script src="./assets/js/test.js"></script> -->
   </body>
 </html>
