Refactor UI logic, fix date handling, and integrate custom event system

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="./assets/vendor/notification/Notification.js"></script>
+    <script src="./assets/js/classes/Events.js"></script>
     <script src="./assets/js/classes/UI.js"></script>
     <script src="./assets/js/main.js"></script>
   </body>
