--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
 
       <nav>
-        <label for="dataInput">
+        <label for="dataInput" title="Load data file from local file system">
           <svg viewBox="0 0 24 24">
             <path
               d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
@@ -68,7 +68,7 @@
     <div class="viewDataContainer" view-data-container>
       <div class="viewDataControls">
         <h2 view-data-date style="flex: 1"></h2>
-        <button delete-day-data-btn>
+        <button title="Delete the data file" delete-day-data-btn>
           <svg viewBox="0 0 24 24">
             <polyline points="3 6 5 6 21 6"></polyline>
             <path
@@ -76,7 +76,7 @@
             ></path>
           </svg>
         </button>
-        <button save-day-data-btn>
+        <button title="Save the data file" save-day-data-btn>
           <svg viewBox="0 0 24 24">
             <path
               d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
@@ -85,7 +85,7 @@
             <polyline points="7 3 7 8 15 8"></polyline>
           </svg>
         </button>
-        <button toggle-edit-day-data-btn>
+        <button title="Toggles between edit/view mode" toggle-edit-day-data-btn>
           <svg viewBox="0 0 24 24">
             <path d="M12 20h9"></path>
             <path
@@ -93,7 +93,7 @@
             ></path>
           </svg>
         </button>
-        <button close-view-data-btn>
+        <button title="close the markdown editor" close-view-data-btn>
           <svg viewBox="0 0 24 24">
             <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
             <line x1="9" y1="9" x2="15" y2="15"></line>
