prev and next month buttons now shows the month name

--- a/index.html
+++ b/index.html
@@ -45,19 +45,17 @@
 
         <span>|</span>
 
-        <button class="prev_month_btn" title="Show previous month" prev-btn>
-          <svg viewBox="0 0 24 24">
-            <line x1="19" y1="12" x2="5" y2="12"></line>
-            <polyline points="12 19 5 12 12 5"></polyline>
-          </svg>
-        </button>
+        <button
+          class="prev_month_btn"
+          title="Show previous month"
+          prev-btn
+        ></button>
 
-        <button class="next_month_btn" title="Show next month" next-btn>
-          <svg viewBox="0 0 24 24">
-            <line x1="5" y1="12" x2="19" y2="12"></line>
-            <polyline points="12 5 19 12 12 19"></polyline>
-          </svg>
-        </button>
+        <button
+          class="next_month_btn"
+          title="Show next month"
+          next-btn
+        ></button>
       </nav>
     </header>
 
