Add search functionality for calendar data

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         <small current-year></small>
       </div>
 
+      <form class="searchForm" search-form>
+        <input type="text" placeholder="Search" name="searchInput" disabled />
+        <button>
+          <svg viewBox="0 0 24 24">
+            <circle cx="11" cy="11" r="8"></circle>
+            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+          </svg>
+        </button>
+      </form>
+
       <nav>
         <label for="dataInput" title="Load data file from local file system">
           <svg viewBox="0 0 24 24">
