feat: Add year selection dropdown and event listener to update calendar based on user input

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       </div>
 
       <form class="searchForm" search-form>
+        <select contain-data-by-year></select>
         <input type="text" placeholder="Search" name="searchInput" disabled />
         <button>
           <svg viewBox="0 0 24 24">
