--- a/index.html
+++ b/index.html
@@ -3,121 +3,127 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="src/vendor/github-markdown/github-markdown.min.css"
+    />
     <title>Calendar</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link
-      rel="stylesheet"
-      href="./assets/vendor/notification/notification.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.8.1/github-markdown.min.css"
-    />
   </head>
-  <body>
+  <body dir="auto">
     <header>
-      <div class="currentDate">
-        <h1 current-month></h1>
-        <small current-year></small>
+      <div class="currentDateView">
+        <h3 current-view-month></h3>
+        <small current-view-year></small>
       </div>
 
-      <form class="searchForm" search-form>
-        <select contain-data-by-year></select>
-        <input type="text" placeholder="Search" name="searchInput" disabled />
-        <button>
+      <form class="search" search>
+        <input type="text" name="q" placeholder="Search" disabled />
+        <!-- <button>
           <svg viewBox="0 0 24 24">
             <circle cx="11" cy="11" r="8"></circle>
             <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
           </svg>
-        </button>
-      </form>
-
-      <nav>
-        <label for="dataInput" title="Load data file from local file system">
-          <svg viewBox="0 0 24 24">
-            <path
-              d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"
-            ></path>
-            <polyline points="14 2 14 8 20 8"></polyline>
-            <line x1="16" y1="13" x2="8" y2="13"></line>
-            <line x1="16" y1="17" x2="8" y2="17"></line>
-            <polyline points="10 9 9 9 8 9"></polyline>
-          </svg>
+        </button> -->
+        <label
+          for="dataInput"
+          title="Load data file from local file system"
+          class="btn"
+          load-data-label
+        >
           <span>LOAD DATA</span>
         </label>
-        <input type="file" id="dataInput" hidden load-data-input />
-        <button class="prev_month_btn" title="Show previous month" download-btn>
+        <input
+          type="file"
+          id="dataInput"
+          accept=".json"
+          hidden
+          load-data-input
+        />
+        <label
+          class="btn downloadDataBtn"
+          title="Download new data"
+          download-data-btn
+        >
           <svg viewBox="0 0 24 24">
             <path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path>
             <polyline points="7 10 12 15 17 10"></polyline>
             <line x1="12" y1="15" x2="12" y2="3"></line>
           </svg>
-        </button>
+        </label>
+        <div class="searchResults" search-results></div>
+      </form>
 
-        <span>|</span>
-
+      <nav class="controls">
         <button
-          class="prev_month_btn"
+          class="prevMonthBtn"
           title="Show previous month"
-          prev-btn
+          prev-month-btn
         ></button>
 
         <button
-          class="next_month_btn"
+          class="nextMonthBtn"
           title="Show next month"
-          next-btn
+          next-month-btn
         ></button>
       </nav>
     </header>
 
-    <div class="weekdays" weekdays></div>
+    <div class="weekdays" weekdays-container></div>
 
-    <div class="calendar" calendar></div>
+    <main class="calendar" calendar></main>
 
-    <div class="viewDataContainer" view-data-container>
-      <div class="viewDataControls">
-        <h2 view-data-date style="flex: 1"></h2>
-        <button title="Delete the data file" delete-day-data-btn>
-          <svg viewBox="0 0 24 24">
-            <polyline points="3 6 5 6 21 6"></polyline>
-            <path
-              d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
-            ></path>
-          </svg>
-        </button>
-        <button title="Save the data file" save-day-data-btn>
-          <svg viewBox="0 0 24 24">
-            <path
-              d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
-            ></path>
-            <polyline points="17 21 17 13 7 13 7 21"></polyline>
-            <polyline points="7 3 7 8 15 8"></polyline>
-          </svg>
-        </button>
-        <button title="Toggles between edit/view mode" toggle-edit-day-data-btn>
-          <svg viewBox="0 0 24 24">
-            <path d="M12 20h9"></path>
-            <path
-              d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
-            ></path>
-          </svg>
-        </button>
-        <button title="close the markdown editor" close-view-data-btn>
-          <svg viewBox="0 0 24 24">
-            <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
-            <line x1="9" y1="9" x2="15" y2="15"></line>
-            <line x1="15" y1="9" x2="9" y2="15"></line>
-          </svg>
-        </button>
+    <div class="viewDataWrapper" view-data-wrapper>
+      <div class="viewDataContainer" view-data-container>
+        <div class="viewDataControls">
+          <h2 view-data-date style="flex: 1"></h2>
+          <button title="Delete the data file" delete-day-data-btn>
+            <svg viewBox="0 0 24 24">
+              <polyline points="3 6 5 6 21 6"></polyline>
+              <path
+                d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
+              ></path>
+            </svg>
+          </button>
+          <button title="Save the data file" save-day-data-btn>
+            <svg viewBox="0 0 24 24">
+              <path
+                d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
+              ></path>
+              <polyline points="17 21 17 13 7 13 7 21"></polyline>
+              <polyline points="7 3 7 8 15 8"></polyline>
+            </svg>
+          </button>
+          <button
+            title="Toggles between edit/view mode"
+            toggle-edit-day-data-btn
+          >
+            <svg viewBox="0 0 24 24" edit-day-data-svg>
+              <path d="M12 20h9"></path>
+              <path
+                d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"
+              ></path>
+            </svg>
+
+            <svg viewBox="0 0 24 24" view-day-data-svg>
+              <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path>
+              <circle cx="12" cy="12" r="3"></circle>
+            </svg>
+          </button>
+          <button title="close the markdown editor" close-view-data-btn>
+            <svg viewBox="0 0 24 24">
+              <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+              <line x1="9" y1="9" x2="15" y2="15"></line>
+              <line x1="15" y1="9" x2="9" y2="15"></line>
+            </svg>
+          </button>
+        </div>
+        <div class="markdown-body" id="output" day-data></div>
+        <textarea id="markdownEditor" edit-day-data></textarea>
       </div>
-      <div class="markdown-body" id="output" day-data></div>
-      <textarea id="markdownEditor" edit-day-data></textarea>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <script src="./assets/vendor/notification/Notification.js"></script>
-    <script src="./assets/js/classes/Events.js"></script>
-    <script src="./assets/js/classes/UI.js"></script>
-    <script src="./assets/js/main.js"></script>
+    <script src="src/vendor/marked/marked.min.js"></script>
+    <script type="module" src="src/js/main.js"></script>
   </body>
 </html>
